--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "gainzville server",
   "main": "server.js",
   "scripts": {
-    "serve": "node ./server.js",
+    "start": "node ./server.js",
     "dev": "nodemon ./server.js"
   },
   "author": "BSL",
